--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -3,10 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="styles/2-common.css">
-	<link rel="stylesheet" href="styles/2-header.css">
-	<link rel="stylesheet" href="styles/2-footer.css">
+	<link rel="stylesheet" href="styles/3-common.css">
+	<link rel="stylesheet" href="styles/3-header.css">
+	<link rel="stylesheet" href="styles/3-footer.css">
 	<title>Airbnb clone</title>
+	<link rel="icon" href="images/icon.png">
 </head>
 <body>
 	<header></header>
